Enfermedades fix gap

--- a/assets/css/enfermedades-style.css
+++ b/assets/css/enfermedades-style.css
@@ -167,7 +167,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 14px;
-    gap: 16px;
+    gap: 2rem;
 }
 
 
